[package]
name = "display-interface-parallel-gpio"
description = "Generic parallel GPIO interface for display interfaces"
version = "0.7.0"
authors = ["Daniel Egger <daniel@eggers-club.de>"]
repository = "https://github.com/therealprof/display-interface"
documentation = "https://docs.rs/display-interface-parallel-gpio"
categories = ["no-std"]
keywords = ["graphics", "display", "embedded"]
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [".gitignore"]
edition = "2021"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true

[dependencies]
embedded-hal-1-0-0 = { version = "1.0.0", package = "embedded-hal", optional = true }
embedded-hal-0-2-7 = { version = "0.2.7", package = "embedded-hal", optional = true }
display-interface = { version = "0.5.0", path = ".." }

[features]
default = ["embedded-hal-1-0-0"]
embedded-hal-1-0-0 = ["dep:embedded-hal-1-0-0"]
embedded-hal-0-2-7 = ["dep:embedded-hal-0-2-7"]
